--- a/server/mainwindow.ui
+++ b/server/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>342</width>
+    <height>702</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="startServerBtn">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>440</y>
+      <x>30</x>
+      <y>180</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -30,18 +30,18 @@
    <widget class="QPlainTextEdit" name="logText">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>150</y>
+      <x>20</x>
+      <y>20</y>
       <width>291</width>
-      <height>221</height>
+      <height>141</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="sendImgBtn">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>440</y>
+      <x>220</x>
+      <y>180</y>
       <width>91</width>
       <height>24</height>
      </rect>
@@ -53,8 +53,8 @@
    <widget class="QLabel" name="label1">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>150</y>
+      <x>40</x>
+      <y>420</y>
       <width>201</width>
       <height>201</height>
      </rect>
@@ -63,13 +63,70 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QLabel" name="staticMemoryUsage">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>210</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Memoria en uso</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="variableMemoryUsage">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>240</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0 Bytes</string>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="tableWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>220</y>
+      <width>171</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <row>
+     <property name="text">
+      <string>Memoria</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>Disco</string>
+     </property>
+    </row>
+    <column>
+     <property name="text">
+      <string>Páginas</string>
+     </property>
+    </column>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>342</width>
      <height>21</height>
     </rect>
    </property>
