--- a/server/mainwindow.ui
+++ b/server/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>342</width>
+    <width>471</width>
     <height>702</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="startServerBtn">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>20</x>
       <y>180</y>
       <width>101</width>
       <height>24</height>
@@ -32,7 +32,7 @@
      <rect>
       <x>20</x>
       <y>20</y>
-      <width>291</width>
+      <width>431</width>
       <height>141</height>
      </rect>
     </property>
@@ -40,7 +40,7 @@
    <widget class="QPushButton" name="sendImgBtn">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>360</x>
       <y>180</y>
       <width>91</width>
       <height>24</height>
@@ -53,10 +53,10 @@
    <widget class="QLabel" name="label1">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>420</y>
-      <width>201</width>
-      <height>201</height>
+      <x>290</x>
+      <y>440</y>
+      <width>161</width>
+      <height>171</height>
      </rect>
     </property>
     <property name="text">
@@ -66,7 +66,7 @@
    <widget class="QLabel" name="staticMemoryUsage">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>180</x>
       <y>210</y>
       <width>131</width>
       <height>31</height>
@@ -81,44 +81,174 @@
     <property name="text">
      <string>Memoria en uso</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QLabel" name="variableMemoryUsage">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>185</x>
       <y>240</y>
-      <width>121</width>
+      <width>120</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>0 Bytes</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>220</y>
-      <width>171</width>
-      <height>101</height>
+      <x>15</x>
+      <y>290</y>
+      <width>431</width>
+      <height>71</height>
      </rect>
     </property>
+    <property name="rowCount">
+     <number>1</number>
+    </property>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>190</number>
+    </attribute>
     <row>
      <property name="text">
-      <string>Memoria</string>
+      <string>Páginas</string>
      </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>Disco</string>
+     <property name="textAlignment">
+      <set>AlignCenter</set>
      </property>
     </row>
     <column>
      <property name="text">
-      <string>Páginas</string>
+      <string>Memoria</string>
      </property>
     </column>
+    <column>
+     <property name="text">
+      <string>Disco</string>
+     </property>
+    </column>
+    <item row="0" column="0">
+     <property name="text">
+      <string/>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="staticPages">
+    <property name="geometry">
+     <rect>
+      <x>125</x>
+      <y>260</y>
+      <width>240</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Páginas</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="staticPageHit">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>370</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Page Hit</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="staticPageFault">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>370</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Page Fault</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="pageHit">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>390</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="pageHit_2">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>390</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -126,7 +256,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>342</width>
+     <width>471</width>
      <height>21</height>
     </rect>
    </property>
