--- a/client/mainwindow.ui
+++ b/client/mainwindow.ui
@@ -7,39 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>631</width>
-    <height>737</height>
+    <height>678</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="connectBtn">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>660</y>
-      <width>80</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Conectar</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="seeImageBtn">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>660</y>
-      <width>80</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>imagen</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="card00">
     <property name="enabled">
      <bool>false</bool>
@@ -3048,40 +3022,6 @@
       <width>90</width>
       <height>90</height>
      </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>520</x>
-      <y>580</y>
-      <width>91</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>90</width>
-      <height>90</height>
-     </size>
-    </property>
-    <property name="checkable">
-     <bool>false</bool>
-    </property>
-    <property name="autoDefault">
-     <bool>false</bool>
-    </property>
-    <property name="default">
-     <bool>false</bool>
-    </property>
-    <property name="flat">
-     <bool>false</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="card10">
@@ -18156,8 +18096,8 @@
    <widget class="QLCDNumber" name="timeSec01">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>580</y>
+      <x>335</x>
+      <y>540</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -18187,8 +18127,8 @@
    <widget class="QLCDNumber" name="timeSec10">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>580</y>
+      <x>315</x>
+      <y>540</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -18218,8 +18158,8 @@
    <widget class="QLCDNumber" name="timeMin01">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>580</y>
+      <x>285</x>
+      <y>540</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -18249,8 +18189,8 @@
    <widget class="QLCDNumber" name="timeMin10">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>580</y>
+      <x>265</x>
+      <y>540</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -18280,8 +18220,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>580</y>
+      <x>315</x>
+      <y>540</y>
       <width>20</width>
       <height>31</height>
      </rect>
@@ -18293,19 +18233,6 @@
     </property>
     <property name="text">
      <string>:</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>600</y>
-      <width>80</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
    </widget>
    <widget class="QLabel" name="playerNameLabel">
@@ -18374,6 +18301,25 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLCDNumber" name="enemyPoints">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>540</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="mode">
+     <enum>QLCDNumber::Dec</enum>
+    </property>
+    <property name="segmentStyle">
+     <enum>QLCDNumber::Flat</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -18389,7 +18335,6 @@
      <string>Juego</string>
     </property>
     <addaction name="actionUnirse"/>
-    <addaction name="actionCrear"/>
    </widget>
    <addaction name="menuJuego"/>
   </widget>
